bk_ida/gccida/c0/append_random_chars
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5009:7: error: use of undeclared identifier 'append_random_chars_value'; did you mean 'append_random_chars'?
if ( !append_random_chars_value ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
      append_random_chars
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5001:7: note: 'append_random_chars' declared here
void  append_random_chars( char *a1) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5012:1: error: use of undeclared identifier 'append_random_chars_value'
append_random_chars_value = st.st_mtim.tv_sec ^ st.st_ino ^ st.st_dev; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5014:1: error: use of undeclared identifier 'append_random_chars_value'
append_random_chars_value = 1LL; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5018:5: error: use of undeclared identifier 'append_random_chars_value'; did you mean 'append_random_chars'?
v = append_random_chars_value; 
    ^~~~~~~~~~~~~~~~~~~~~~~~~
    append_random_chars
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5001:7: note: 'append_random_chars' declared here
void  append_random_chars( char *a1) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5019:42: error: use of undeclared identifier 'append_random_chars_value'; did you mean 'append_random_chars'?
*templatea = append_random_chars_letters[append_random_chars_value % 0x3E]; 
                                         ^~~~~~~~~~~~~~~~~~~~~~~~~
                                         append_random_chars
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5001:7: note: 'append_random_chars' declared here
void  append_random_chars( char *a1) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5019:68: error: invalid operands to binary expression ('void (char *)' and 'int')
*templatea = append_random_chars_letters[append_random_chars_value % 0x3E]; 
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5019:14: error: use of undeclared identifier 'append_random_chars_letters'; did you mean 'append_random_chars'?
*templatea = append_random_chars_letters[append_random_chars_value % 0x3E]; 
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~
             append_random_chars
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5001:7: note: 'append_random_chars' declared here
void  append_random_chars( char *a1) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5021:16: error: use of undeclared identifier 'append_random_chars_letters'
templatea[1] = append_random_chars_letters[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5023:16: error: use of undeclared identifier 'append_random_chars_letters'
templatea[2] = append_random_chars_letters[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5025:16: error: use of undeclared identifier 'append_random_chars_letters'
templatea[3] = append_random_chars_letters[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5027:16: error: use of undeclared identifier 'append_random_chars_letters'
templatea[4] = append_random_chars_letters[v % 0x3E]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/tree.c:5029:16: error: use of undeclared identifier 'append_random_chars_letters'
templatea[5] = append_random_chars_letters[v % 0x3E]; 
               ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/append_random_chars/src/obj/tree.o] Error 1
